Adding Automation trail framework

--- a/AutomationTrial/AutomationTrial.csproj
+++ b/AutomationTrial/AutomationTrial.csproj
@@ -94,7 +94,9 @@
     <Compile Include="Helper\Users.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Features\Login.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Login.feature.cs</LastGenOutput>
